--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.9.0",
     "@nuxtjs/pwa": "^3.0.0-0",
+    "dompurify": "^2.0.7",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
